<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_light"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/meow"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/txt_avatar"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/profile_avatar"
                >
                <LinearLayout
                    android:id="@+id/profile_name"
                    android:background="@color/bg_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginBottom="3dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_name"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>

                <LinearLayout
                    android:background="@color/bg_white"
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginBottom="3dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_email"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_birthday"
                    android:background="@color/bg_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginBottom="3dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_birthday"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_gender"
                    android:background="@color/bg_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginBottom="3dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_gender"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_identification_card"
                    android:background="@color/bg_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginBottom="3dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_identification_card"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/tv_identification_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cmnd"
                        android:textSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_address"
                    android:background="@color/bg_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginBottom="3dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_address"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_phone_number"
                    android:background="@color/bg_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_phone_number"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/bg_white"
                    android:orientation="horizontal"
                    android:layout_marginBottom="3dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_add_address"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_next"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="end"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/bg_white"
                    android:layout_marginBottom="3dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_change_profile"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_next"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="end"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/bg_white"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_change_password"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_next"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="end"
                        />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
